# cargo-warloc

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
src/: cli.rs  git.rs  main.rs  output.rs  pathutil.rs  visitor.rs  warlocs.rs
