[package]
name = "cargo-warloc"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Smart LOC counter for Rust projects"
repository = "https://github.com/Maximkaaa/cargo-warloc"
authors = ["Maxim Gritsenko <maxim@gritsenko.biz>"]
documentation = "https://docs.rs/cargo-warloc"
keywords = ["cargo", "loc"]
categories = ["development-tools", "development-tools::cargo-plugins"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4.23"
utf8-chars = "3.0.5"
walkdir = "2.5.0"
